--- a/financial.qmd
+++ b/financial.qmd
@@ -5,8 +5,8 @@
 ***Overview:*** Total maximum direct compensation will be approximately
 \$900 per participant, varying slightly month to month. Additionally, we
 also pay \$600 (\$50/month) to offset the costs of participants'
-cellular plans. These payments are made directly to the cellular plan
-provider.
+cellular plans. These payments are deposited directly onto the participant's 
+payment debit card unless otherwise specifically requested.
 
 ***Timing:*** Participants will be on a bonus cycle fixed to the
 calendar, defined by \~two-week intervals (i.e., two intervals per
