--- a/focus_blue_mailer_setup.qmd
+++ b/focus_blue_mailer_setup.qmd
@@ -43,7 +43,7 @@ All materials to create envelopes will be located in room 187 (Susan's office).
 1. Count the new participants and pull 1 pre-made Priority Mailer envelope per person
 
 2. Enter payment card numbers into the Participant Payment Log:
-    -   This PC \> Private drive \> studydata \> risk2 \> administration \> financial \> participant_payment_logs \> participant_payment_log_risk3\
+    -   This PC \> Private drive \> studydata \> risk2 \> administration \> financial \> participant_payment_logs \> participant_payment_log_risk3.csv\
     -   If not already added, add subID and date, and your initials
     - Add "card registration/consent payment" to the notes field
     - Upload Notes is NA or blank
