--- a/focus_blue_mailer_setup.qmd
+++ b/focus_blue_mailer_setup.qmd
@@ -44,6 +44,7 @@ All materials to create envelopes will be located in room 187 (Susan's office).
 
 2. Enter payment card numbers into the Participant Payment Log:
     -   This PC \> Private drive \> studydata \> risk2 \> administration \> financial \> participant_payment_logs \> participant_payment_log_risk3.csv\
+    - IMPORTANT NOTE: Be sure NOT to use Excel. Instead use Ron's Editor or Ron's Data Edit (two versions of the same software). Excel messes up the date fields and prevents the R scripts from opening the file. If you don't have either Ron's Editor or Ron's Data Edit on your RA computer, please tell Susan.
     -   If not already added, add subID and date, and your initials
     - Add "card registration/consent payment" to the notes field
     - Upload Notes is NA or blank
